# PythonSnips

./: .gitignore  .pre-commit-config.yaml  .travis.yml  100+ Python challenging programming exercises.md  CONTRIBUTING.md  DIRECTORY.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  Vagrantfile  circle.yml  cleanup.sh  codecov.yml  commands  dangerfile.ts  graph_sample.py  hello.txt  leaderboard.html  os  provision.sh  pyproject.toml  pytest.ini  requirements-travis.txt  requirements.txt  setup.py  shutil  sys
.circleci/: config.yml
.github/: auto_assign.yml  pull_request_template.md  stale.yml
Algorithms/: petethebaker.py
Alternate/: Alternate.py
Arrays/: OnesZeros.py
Battleship game/: battleship.py
Binary/: README.md  count_binary.py  divisible_5.py  hex_to_dec.py
Classes/: Ghost.py  README.md
Classroom/: Classroom.py
ControlFlow/: switchcase.py
DSA/: README.md  bubble_sort.py
Data_Search/: json_files.py  json_stats.py
EvilOrOdius/: EvilOrOdious.py
Files/: README.md  User_Data.json  datafile.txt  json_files.py  json_stats.py  user.txt  user_file.py  word_reader.py
Generators/: mod7.py
Graphics/: Turtle.py
Hashes/: README.md  dictionary_square_keys.py  rna_to_protein.py  square_climber.py  tuple_sorter.py  word_frequency.py
Higher_order_functions/: CreateIterator.py
Interact/: interact.py
Leap Year/: LeapYear.py
LinkedLists/: LinkedLists.py
Lists/: 2D_Array.py  Conter.py  README.md  RemoveDuplicates.py  SumOdds.py  bus_stops.py  dominator.py  print_array.py  repeat_sum.py
LongestWord/: Longest word.py
Math/: DigitSum.py  (+4 more)
(+4377 files in other folders)
