[tool.poetry]
name = "pythonsnips"
version = "0.1.0"
description = ""
authors = ["BrianLusina <12752833+BrianLusina@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[tool.poetry.group.test.dependencies]
pytest-benchmark = "^5.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
